i18n/pt/docusaurus-plugin-content-docs/version-19/Project/architecture.md
---
id: architecture
title: Arquitetura de um projeto 4D
---

A 4D project is made of several folders and files, stored within a single project root folder (package folder). Por exemplo:

- MyPackage (*pasta de raiz do projeto*)
  - Componentes
  - Dados
    - Logs
    - Settings
  - Documentation
  - Plugins
  - Project
    - DerivedData
    - Sources
    - Trash
  - Resources
  - Settings
  - userPreferences.username
  - WebFolder

> If your project has been converted from a binary database, additional folders may be present. See "Converting databases to projects" on [doc.4d.com](https://doc.4d.com).

## Pasta Project

The Project folder typically contains the following hierarchy:

- Ficheiro *nomApplication*.4DProject
- Sources
  - Classes
  - DatabaseMethods
  - Página Métodos
  - Formulários
  - TableForms
  - Triggers
- DerivedData
- Trash (se houver)

### Ficheiro *nomApplication*.4DProject

Project development file, used to designate and launch the project. Esse arquivo pode ser aberto por:

- 4D
- 4D Server (apenas leitura, ver [Desenvolver um projeto](developing.md))

> **Nota:** nos projetos 4D, o desenvolvimento se realiza com 4D Developer e o desenvolvimento multiusuários se gerencia através das ferramentas de controle de versão. 4D Server can open .4DProject files for testing purposes.

### Pasta Sources

| Conteúdos               | Descrição                                                                                                                                                                                                                                                                                                                                                                                        | Formato |
| ----------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------- |
| catalog.4DCatalog       | Definições de tabelas e campos                                                                                                                                                                                                                                                                                                                                                                   | XML     |
| folders.json            | Definições de pasta do Explorer                                                                                                                                                                                                                                                                                                                                                                  | JSON    |
| menus.json              | Menu definitions                                                                                                                                                                                                                                                                                                                                                                                 | JSON    |
| settings.4DSettings     | Propriedades de la base *Structure*. They are not taken into account if *[user settings](#settings-folder-1)* or *[user settings for data](#settings-folder)* are defined.**Warning**: In compiled applications, structure settings are stored in the .4dz file (read-only). For deployment needs, it is necessary to use *user settings* or *user settings for data* to define custom settings. | XML     |
| tips.json               | Dicas definidas                                                                                                                                                                                                                                                                                                                                                                                  | JSON    |
| lists.json              | Listas definidas                                                                                                                                                                                                                                                                                                                                                                                 | JSON    |
| filters.json            | Filtros definidos                                                                                                                                                                                                                                                                                                                                                                                | JSON    |
| styleSheets.css         | Folhas de estilo CSS                                                                                                                                                                                                                                                                                                                                                                             | CSS     |
| styleSheets_mac.css     | Mac css style sheets (from converted binary database)                                                                                                                                                                                                                                                                                                                                            | CSS     |
| styleSheets_windows.css | Windows css style sheets (from converted binary database)                                                                                                                                                                                                                                                                                                                                        | CSS     |

#### Pasta DatabaseMethods

| Conteúdos                | Descrição                                                                      | Formato |
| ------------------------ | ------------------------------------------------------------------------------ | ------- |
| *databaseMethodName*.4dm | Métodos de projeto definidos na database. Um ficheiro por método base de dados | text    |

#### Pasta Methods

| Conteúdos        | Descrição                                                            | Formato |
| ---------------- | -------------------------------------------------------------------- | ------- |
| *methodName*.4dm | Métodos de banco definidos na database. One file per database method | text    |

#### Pasta Classes

| Conteúdos       | Descrição                                                                                                                          | Formato |
| --------------- | ---------------------------------------------------------------------------------------------------------------------------------- | ------- |
| *className*.4dm | User class definition method, allowing to instantiate specific objects. One file per class, the name of the file is the class name | text    |

#### Pasta Forms

| Conteúdos                                 | Descrição                                   | Formato |
| ----------------------------------------- | ------------------------------------------- | ------- |
| *formName*/form.4DForm                    | Descrição do formulário projeto             | json    |
| *formName*/method.4dm                     | Método formulário projecto                  | text    |
| *formName*/Images/*pictureName*           | Imagem estática do formulário projeto       | picture |
| *formName*/ObjectMethods/*objectName*.4dm | Métodos objecto. One file per object method | text    |

#### Pasta TableForms

| Conteúdos                                            | Descrição                                              | Formato |
| ---------------------------------------------------- | ------------------------------------------------------ | ------- |
| *n*/Input/*formName*/form.4DForm                     | Input table form description (n is the table number)   | json    |
| *n*/Input/*formName*/Images/*pictureName*            | Imagens estáticas do formulário de entrada da tabela   | picture |
| *n*/Input/*formName*/method.4dm                      | Input table form method                                | text    |
| *n*/Input/*formName*/ObjectMethods/*objectName*.4dm  | Input form object methods. One file per object method  | text    |
| *n*/Output/*formName*/form.4DForm                    | Output table form description (n is the table number)  | json    |
| *n*/Output/*formName*/Images/*pictureName*           | Output table form static pictures                      | picture |
| *n*/Output/*formName*/method.4dm                     | Output table form method                               | text    |
| *n*/Output/*formName*/ObjectMethods/*objectName*.4dm | Output form object methods. One file per object method | text    |

#### Pasta Triggers

| Conteúdos     | Descrição                                                                                 | Formato |
| ------------- | ----------------------------------------------------------------------------------------- | ------- |
| table_*n*.4dm | Métodos trigger definidos na database. One trigger file per table (n is the table number) | text    |

**Note:** The .4dm file extension is a text-based file format, containing the code of a 4D method. É compatível com as ferramentas de controlo da versão.

### Pasta Trash

The Trash folder contains methods and forms that were deleted from the project (if any). Pode conter as seguintes pastas:

- Página Métodos
- Formulários
- TableForms

Within these folders, deleted element names are in parentheses, e.g. "(myMethod).4dm". The folder organization is identical to the [Sources](#sources) folder.

### DerivedData folder

The DerivedData folder contains cached data used internally by 4D to optimize processing. It is automatically created or recreated when necessary. Você pode ignorar essa pasta.

## Pasta Libraries

> Esta pasta é utilizada apenas no macOS.

The Librairies folder contains the file resulting from a compilation with the [Silicon compiler](compiler.md#silicon-compiler) on macOS.

## Pasta Resources

A pasta Resources contém todos os arquivos e pastas de recursos personalizados do projeto. In this folder, you can place all the files needed for the translation or customization of the application interface (picture files, text files, XLIFF files, etc.). 4D uses automatic mechanisms to work with the contents of this folder, in particular for the handling of XLIFF files and static pictures. For using in remote mode, the Resources folder lets you share files between the server machine and all the client machines. See the *4D Server Reference Manual*.

| Conteúdos             | Descrição                                                                                                                                                         | Formato |
| --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| *item*                | Arquivos e pastas dos recursos do banco de dados                                                                                                                  | vários  |
| Images/Library/*item* | Pictures from the Picture Library as separate files(*). Os nomes destes itens tornam-se nomes de ficheiros. If a duplicate exists, a number is added to the name. | picture |

(*) only if the project was exported from a .4db binary database.

## Pasta Data

The data folder contains the data file and all files and folders relating to the data.

| Conteúdos    | Descrição                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Formato |
| ------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| data.4dd(*)  | Data file containing data entered in the records and all the data belonging to the records. When you open a 4D project, the application opens the current data file by default. If you change the name or location of this file, the *Open data file* dialog box will then appear so that you can select the data file to use or create a new one                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | binary  |
| data.journal | Criado apenas quando a base de dados utiliza um ficheiro de registo. The log file is used to ensure the security of the data between backups. All operations carried out on the data are recorded sequentially in this file. Therefore, each operation on the data causes two simultaneous actions: the first on the data (the statement is executed normally) and the second in the log file (a description of the operation is recorded). The log file is constructed independently, without disturbing or slowing down the user’s work. A database can only work with a single log file at a time. The log file records operations such as additions, modifications or deletions of records, transactions, etc. It is generated by default when a database is created. It is generated by default when a database is created. | binary  |
| data.match   | (interno) UUID correspondente ao número da tabela                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | XML     |

(*) When the project is created from a .4db binary database, the data file is left untouched. Thus, it can be named differently and placed in another location.

### Settings folder

Se existir um arquivo de propriedades de dados [em uma pasta de dados ](#settings-folder), da pasta Dados, tem prioridade sobre o arquivo de propriedades do usuário.

> These settings take priority over **[user settings files](#settings-folder-1)** and **[structure settings](#sources-folder)** files.

| Conteúdos           | Descrição                                                                                                                                                                                                                                                                                | Formato |
| ------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| directory.json      | Descrição de os grupos e usuários de 4D e seus direitos de acesso quando o banco for lançado com este arquivo de dados.                                                                                                                                                                  | JSON    |
| Backup.4DSettings   | Parâmetros de cópia de segurança do banco de dados, utilizados para definir as [opções de cópia de segurança](Backup/settings.md)) quando o banco de dados for lançado com este arquivo de dados. Keys concerning backup configuration are described in the *4D XML Keys Backup* manual. | XML     |
| settings.4DSettings | Propriedades personalizadas de o banco de dados para este arquivo de dados.                                                                                                                                                                                                              | XML     |

### Pasta Logs

The Logs folder contains all log files used by the project. Os ficheiros de registo incluem, em particular:

- conversão da base de dados,
- pedidos do servidor Web,
- backup/restore activities journal (*Backup Journal\[xxx].txt*, see [Backup journal](Backup/backup.md#backup-journal))
- depuração de comandos,
- 4D Server requests (generated on client machines and on the server).

> An additional Logs folder is available in the system user preferences folder (active 4D folder, see [Get 4D folder](https://doc.4d.com/4Dv18R4/4D/18-R4/Get-4D-folder.301-4982857.en.html) command) for maintenance log files and in cases where data folder is read-only.

## Settings folder

Esta pasta contém **arquivos de configuração de dados** utilizados para a administração do banco de dados.

> These settings take priority over **[structure settings](#sources-folder)** files. However, if a **[user settings file for data](#settings-folder)** exists, it takes priority over user settings file.

| Conteúdos           | Descrição                                                                                                                                                                                                                                                                                                                            | Formato |
| ------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------- |
| directory.json      | Descrição dos grupos e usuários de 4D para o banco de dados, assim como seus direitos de acesso                                                                                                                                                                                                                                      | JSON    |
| Backup.4DSettings   | Database backup settings, used to set the [backup options](Backup/settings.md)) when each backup is launched. This file can also be used to read or set additional options, such as the amount of information stored in the *backup journal*. Keys concerning backup configuration are described in the *4D XML Keys Backup* manual. | XML     |
| BuildApp.4DSettings | Build settings file, created automatically when using the application builder dialog box or the `BUILD APPLICATION` command                                                                                                                                                                                                          | XML     |

## userPreferences.*userName* folder

Esta pasta contém arquivos que memorizam as configurações do usuário, por exemplo, o ponto de ruptura ou as posições das janelas. Pode simplesmente ignorar esta pasta. Contém, por exemplo:

| Conteúdos                  | Descrição                                                   | Formato |
| -------------------------- | ----------------------------------------------------------- | ------- |
| methodPreferences.json     | Preferências do editor dos métodos do usuário atual         | JSON    |
| methodWindowPositions.json | Posição da janela do usuário atual para os métodos          | JSON    |
| formWindowPositions.json   | Posição da janela do usuário atual para os formulários      | JSON    |
| workspace.json             | List of opened windows; on macOS, order of tab windows      | JSON    |
| debuggerCatches.json       | Chamadas aos comandos                                       | JSON    |
| recentTables.json          | Lista ordenada de tabelas                                   | JSON    |
| preferences.4DPreferences  | Rota de dados atual e posições da janela principal          | XML     |
| CompilerIntermediateFiles  | Intermediate files resulting from Apple Silicon compilation | Folder  |

## Pasta Components

Esta carpeta contém os componentes que devem estar disponíveis unicamente no banco de dados projeto. It must be stored at the same level as the Project folder.

> An application project can be used itself as a component:
> 
> - for development: put an alias of the .4dproject file in the Components folder of the host project.
> - for deployment: [build the component](Desktop/building.md#build-component) and put the resulting .4dz file in a .4dbase folder in the Components folder of the host application.

## Pasta Plugins

This folder contains the plug-ins to be available in the project database only. It must be stored at the same level as the Project folder.

## Pasta Documentation

This folder contains all documentation files (.md) created for the project elements such as classes, methods, or forms. Documentation files are managed and displayed in the 4D Explorer.

For more information, refer to [Documenting a project](Project/documentation.md).

## WebFolder

Defaut root folder of the 4D Web server for pages, pictures, etc. It is automatically created when the Web server is launched for the first time. It is automatically created when the Web server is launched for the first time.
